[package]
name = "fastcgi-healhcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
hyper = { version = "1.2.0", features = ["server", "http1"] }
tokio = { version = "1.37.0", features = ["rt", "io-util", "macros", "sync", "net", "rt-multi-thread"] }
kvarn-fastcgi-client = "0.9.0"
